bk_ida/gccida/g3/change_address
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2414:34: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  change_address( rtx memref, machine_mode mode, rtx addr) 
                                 ^
                                 enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2416:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2419:4: error: expected ';' after expression
rtx v6; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2419:5: error: use of undeclared identifier 'v6'
rtx v6; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2420:4: error: expected ';' after expression
rtx v7; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2420:5: error: use of undeclared identifier 'v7'
rtx v7; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2424:4: error: expected ';' after expression
rtx v11; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2424:5: error: use of undeclared identifier 'v11'; did you mean 'v10'?
rtx v11; // rax 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2423:5: note: 'v10' declared here
int v10; // ebp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2462:91: error: use of undeclared identifier 'v6'
if ( !rtx_equal_p( rtx, memref->fld[0].rtx) || ( v5 = *( ( unsigned __int8 *)memref + 2), v6 = memref, v3 != ( _DWORD)v5) ) 
                                                                                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2464:1: error: use of undeclared identifier 'v7'
v7 = gen_rtx_fmt_e0( MEM, v3, rtx); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2465:14: error: use of undeclared identifier 'v7'
*( _QWORD *)&v7[1] = 0LL; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2466:1: error: use of undeclared identifier 'v6'
v6 = v7; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2466:6: error: use of undeclared identifier 'v7'
v6 = v7; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2467:29: error: use of undeclared identifier 'v7'
v5 = *( ( unsigned __int8 *)v7 + 2); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2468:9: error: use of undeclared identifier 'v7'
LOBYTE( v7) = *( ( _BYTE *)memref + 3) & 8 | *( ( _BYTE *)v7 + 3) & 0xF7; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2468:59: error: use of undeclared identifier 'v7'
LOBYTE( v7) = *( ( _BYTE *)memref + 3) & 8 | *( ( _BYTE *)v7 + 3) & 0xF7; 
                                                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2469:14: error: use of undeclared identifier 'v6'
*( ( _BYTE *)v6 + 3) = ( _BYTE)v7; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2469:32: error: use of undeclared identifier 'v7'
*( ( _BYTE *)v6 + 3) = ( _BYTE)v7; 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/emit-rtl.c:2470:9: error: use of undeclared identifier 'v7'
LOBYTE( v7) = *( ( _BYTE *)memref + 3) & 0x10 | ( unsigned __int8)v7 & 0xEF; 
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/change_address/src/obj/emit-rtl.o] Error 1
